// Factory Method для создания курсов
public interface Course {
    String getName();
}
