public interface CourseFactory {
    Course createCourse();
}
