public class DesignCourse implements Course {
    @Override
    public String getName() {
        return "Design Course";
    }
}
