public class ProgrammingCourse implements Course {
    @Override
    public String getName() {
        return "Programming Course";
    }
}
