// Factory для создания студентов
public interface Student {
    String getName();
    Course getCourse();
    String getEmail();
}

