public interface StudentFactory {
    Student createStudent(String name, Course course, String email);
}
